inicio da sprint 02 - arquitetura

--- a/01 - Sprint - Desenvolvimento Full Stack Basico/03 - Desenvolvimento Full Stack Básico/app/backend/requirements.txt
+++ b/01 - Sprint - Desenvolvimento Full Stack Basico/03 - Desenvolvimento Full Stack Básico/app/backend/requirements.txt
@@ -1,5 +1,9 @@
-flask
-flask-cors
+Flask
+Flask-Cors
+flask_marshmallow
+SQLAlchemy
+Flask-SQLAlchemy
 python-dotenv
 psycopg2-binary
-flask-openapi3
+flasgger
+marshmallow-sqlalchemy
